# libtorrent4j

./: .codacy.yml  .gitignore  .gitmodules  .travis.yml  LICENSE.md  README.md  build.gradle  build.gradle.kts  changelog.txt  gradle.properties  settings.gradle.kts
swig/: CMakeLists.txt  Jamfile  boost-build.jam  build-freebsd.sh  build-macos-arm64.sh  build-macos.sh  get-binaries.sh  jni.h  libtorrent.h  libtorrent.hpp  libtorrent.i  libtorrent_jni.cpp  libtorrent_jni.h  run-swig.sh  std_bitset.i
swig/android-build/: Dockerfile  b2-arm.sh  b2-arm64.sh  b2-x86.sh  b2-x86_64.sh  build-arm.sh  build-arm64.sh  build-x86.sh  build-x86_64.sh
swig/boost/: boost_map.i
swig/config/: android-arm-config.jam  android-arm64-config.jam  android-x86-config.jam  android-x86_64-config.jam  linux-arm-config.jam  linux-x86-config.jam  linux-x86_64-config.jam  macos-arm64-config.jam  macos-x86_64-config.jam  windows-x86-config.jam  windows-x86_64-config.jam
swig/libtorrent/: add_torrent_params.i  address.i  alert.i  alert_types.i  announce_entry.i  bdecode.i  client_data.i  close_reason.i  create_torrent.i  entry.i  error_code.i  file_storage.i  fingerprint.i  flags.i  info_hash.i  ip_filter.i  load_torrent.i  magnet_uri.i  operations.i  peer_class.i  peer_class_type_filter.i  peer_id.i  peer_info.i  peer_request.i  performance_counters.i  pex_flags.i  piece_block.i  portmap.i  read_resume_data.i  session.i  session_handle.i  session_params.i  session_stats.i  session_types.i  settings_pack.i  sha1_hash.i  socket.i  socket_type.i  span.i  storage_defs.i  (+8 more)
swig/scripts/: setup-ndk.sh  (+5 more)
(+764 files in other folders)
